tests/sksl/errors/ReservedNameAsm.glsl
### Compilation failed:

error: 1: 'asm' is a reserved word
1 error
